@@ -26,6 +26,9 @@ dpkg (1.15.6) UNRELEASED; urgency=low
   * Fix update-alternatives to not try to reinstall an unknown alternative
     when the link group is broken, instead switch to the best choice in
     automatic mode. Closes: #566406
+  * Don't return duplicate bug numbers in Launchpad-Bugs-Fixed:.
+    Thanks to Brian Murray <brian@ubuntu.com> for the report
+    and the patch. Closes: #569618
 
   [ Guillem Jover ]
   * Handle argument parsing in dpkg-checkbuilddeps and dpkg-scanpackages
